# aws-rag-chatbot

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements-lambda.txt
docs/: deployment.md
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  auth.js  index.css
frontend/src/components/: ChatMessage.jsx  Sources.jsx
scripts/: build-lambdas.sh  setup-secrets.sh
src/aws_rag_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/evaluation/: ragas_eval.py
src/ingestion/: chunker.py  embedder.py  scraper.py
src/query/: rag.py
src/utils/: ssm.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/auth/: main.tf  variables.tf
terraform/modules/frontend/: main.tf
terraform/modules/ingestion/: eventbridge.tf  iam.tf  lambdas.tf  outputs.tf  step_functions.tf  variables.tf
terraform/modules/monitoring/: main.tf  variables.tf
terraform/modules/query-api/: api_gateway.tf  dynamo.tf  lambdas.tf  variables.tf
terraform/modules/secrets/: main.tf  variables.tf
tests/evaluation/: test_ragas_eval.py
tests/ingestion/: test_chunker.py  test_embedder.py  test_scraper.py
tests/query/: test_rag.py
