[project]
name = "aws-rag-chatbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.30.0",
    "pinecone>=3.0.0",
    "boto3>=1.34.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "tiktoken>=0.6.0",
    "ragas>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "moto[s3,dynamodb,stepfunctions,events,sns]>=5.0.0",
    "responses>=0.25.0",
]
